# docking

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run.py  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
docking/: __init__.py  app.py  autohide.py  config.py  dnd.py  dock_model.py  dock_renderer.py  dock_window.py  launcher.py  log.py  menu.py  preview.py  theme.py  window_tracker.py  zoom.py
docking/applets/: __init__.py  ambient.py  applications.py  base.py  battery.py  calendar.py  clippy.py  clock.py  cpumonitor.py  desktop.py  hydration.py  identity.py  ids.py  network.py  pomodoro.py  quote.py  screenshot.py  separator.py  session.py  trash.py  volume.py  workspaces.py
docking/applets/weather/: __init__.py  api.py  cities.py
docking/assets/sounds/: LICENSING.md
docking/assets/themes/: default-dark.json  default.json  matte.json  transparent.json  ubuntu-mate.json  yaru-dark.json
docking/core/: __init__.py  config.py  position.py  theme.py  zoom.py
docking/docklets/: __init__.py  applications.py  base.py  battery.py  clippy.py  clock.py  cpumonitor.py  desktop.py  trash.py
docking/docklets/weather/: __init__.py  api.py  cities.py
docking/platform/: __init__.py  launcher.py  model.py  struts.py  window_tracker.py
docking/ui/: __init__.py  autohide.py  dnd.py  dock_window.py  effects.py  hover.py  menu.py  poof.py  preview.py  renderer.py  shelf.py  tooltip.py
docs/: ARCHITECTURE.md  ICONS.md
packaging/: README.md
packaging/appimage/: AppImageBuilder.yml  build.sh
packaging/arch/: PKGBUILD  build.sh
packaging/deb/: build.sh  docking  docking.desktop  org.docking.Docking.desktop
packaging/deb/debian/: changelog  control  copyright  install  rules
packaging/deb/debian/tests/: control
packaging/flatpak/: build.sh  hicolor.index.theme  org.docking.Docking.json  org.docking.Docking.metainfo.xml
packaging/nix/: build.sh  default.nix
packaging/rpm/: build.sh  docking.spec
packaging/snap/: snapcraft.yaml
tests/: test_app.py  test_autohide.py  test_config.py  test_dnd.py  test_dock_model.py  test_launcher.py  test_theme.py  test_zoom.py
tests/applets/: test_ambient.py  test_applications.py  test_battery.py  test_calendar.py  test_clippy.py  test_clock.py  test_cpumonitor.py  test_desktop.py  test_hydration.py  test_identity.py  test_network.py  test_pomodoro.py  test_quote.py  test_registry.py  test_screenshot.py  test_separator.py  test_session.py  test_trash.py  test_volume.py  test_weather.py  test_weather_api.py  test_weather_cities.py  test_workspaces.py
tests/core/: test_config.py  test_position.py  test_theme.py  test_zoom.py
tests/docklets/: test_applications.py  test_battery.py  test_clippy.py  test_clock.py  test_cpumonitor.py  test_desktop.py  test_registry.py  test_trash.py  test_weather.py  test_weather_api.py  test_weather_cities.py
tests/platform/: test_launcher.py  test_model.py  test_struts.py  test_window_tracker.py  test_window_tracker_integration.py
tests/ui/: test_autohide.py  test_dnd.py  test_dnd_integration.py  test_dock_window_integration.py  test_effects.py  test_hover.py  test_hover_integration.py  test_icon_position.py  test_input_region.py  test_leave_behavior.py  test_menu.py  test_menu_integration.py  test_poof.py  test_preview.py  test_renderer.py  test_renderer_flicker.py  test_renderer_integration.py  test_shelf.py  test_tooltip.py  test_urgent_glow.py
themes/: default.json
tools/: keyword_args.py
