[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docking"
version = "0.1.0"
description = "A lightweight dock for Linux, inspired by Plank"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "openmeteo-requests>=1.2",
    "requests-cache>=1.0",
    "retry-requests>=2.0",
]

[project.scripts]
docking = "docking.app:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "mypy", "flake8"]

[tool.setuptools.packages.find]
include = ["docking*"]

[tool.setuptools.package-data]
docking = [
    "assets/**/*.svg",
    "assets/**/*.json",
    "assets/**/*.csv.gz",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
