[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docking"
version = "0.1.0"
description = "A lightweight dock for Linux, inspired by Plank"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
dependencies = [
    "openmeteo-requests>=1.2",
    "requests-cache>=1.0",
    "retry-requests>=2.0",
]

[project.scripts]
docking = "docking.app:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff>=0.15", "ty>=0.0.19"]

[tool.setuptools.packages.find]
include = ["docking*"]

[tool.setuptools.package-data]
docking = [
    "assets/**/*.svg",
    "assets/**/*.png",
    "assets/**/*.json",
    "assets/**/*.csv.gz",
    "assets/**/*.ogg",
    "assets/**/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E402"]  # gi.require_version() must precede gi.repository imports

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]  # test data strings can exceed line length

[tool.ty.environment]
python-version = "3.10"

[tool.ty.rules]
unresolved-import = "ignore"  # gi/cairo lack type stubs
unresolved-attribute = "ignore"  # gi.repository dynamic attrs
# openmeteo-requests has incomplete type stubs
invalid-argument-type = "warn"
no-matching-overload = "warn"
