# Shim for older setuptools that can't read pyproject.toml PEP 621 metadata.
# The canonical config is in pyproject.toml.
[metadata]
name = docking
version = 0.1.0

[options]
packages = find:
python_requires = >=3.10

[options.packages.find]
include = docking*

[options.package_data]
docking =
    assets/**/*.svg
    assets/**/*.json
    assets/**/*.csv.gz
